--- a/projects.json
+++ b/projects.json
@@ -138,6 +138,11 @@
     "title": "Project Title",
     "tags": ["branding"],
     "image": "img/shopiya.webp"
+  },
+  {
+    "title": "Project Title",
+    "tags": ["product", "3d"],
+    "image": "img/martino.png"
   }
   
 
