--- a/projects.json
+++ b/projects.json
@@ -62,7 +62,7 @@
   {
     "title": "Project Title",
     "tags": ["branding"],
-    "image": "img/Logo_02.webp"
+    "image": "img/logo_02.webp"
   },
   {
     "title": "Project Title",
