--- a/projects.json
+++ b/projects.json
@@ -117,7 +117,7 @@
   {
     "title": "Project Title",
     "tags": ["poster", "branding"],
-    "image": "img/anugerah_static_ad.webp"
+    "image": "img/Anugerah_static_ad.webp"
   },
   {
     "title": "Project Title",
