--- a/projects.json
+++ b/projects.json
@@ -143,6 +143,11 @@
     "title": "Project Title",
     "tags": ["product", "3d"],
     "image": "img/martino.png"
+  },
+  {
+    "title": "Project Title",
+    "tags": ["3d"],
+    "image": "img/money_01.gif"
   }
   
 
