--- a/projects.json
+++ b/projects.json
@@ -163,6 +163,11 @@
     "title": "Project Title",
     "tags": ["3d", "product"],
     "video": "videos/taila.mp4"
+  },
+  {
+    "title": "Project Title",
+    "tags": ["3d", "product"],
+    "video": "videos/oinko.mp4"
   }
   
 
