--- a/projects.json
+++ b/projects.json
@@ -182,7 +182,7 @@
      {
     "title": "Project Title",
     "tags": ["poster", "3d", "product"],
-    "image": "videos/fishcannies.mp4"
+    "video": "videos/fishcannies.mp4"
   }
   
 
