--- a/projects.json
+++ b/projects.json
@@ -188,6 +188,11 @@
     "title": "Project Title",
     "tags": ["branding"],
     "image": "img/orange-navy.png"
+  },
+      {
+    "title": "Project Title",
+    "tags": ["branding", "website", "product"],
+    "image": "img/webo.png"
   }
   
 
