--- a/projects.json
+++ b/projects.json
@@ -193,7 +193,13 @@
     "title": "Project Title",
     "tags": ["branding", "website", "product"],
     "image": "img/webo.png"
+  },
+  {
+    "title": "Project Title",
+    "tags": ["branding"],
+    "image": "img/tarot_logo.webp"
   }
+
   
 
 
