--- a/projects.json
+++ b/projects.json
@@ -198,6 +198,11 @@
     "title": "Project Title",
     "tags": ["branding"],
     "image": "img/tarot_logo.webp"
+  },
+  {
+    "title": "Project Title",
+    "tags": ["branding"],
+    "image": "img/yosef.webp"
   }
 
   
