--- a/.pages.yml
+++ b/.pages.yml
@@ -1,1 +1,9 @@
 media: img
+content:
+ - name: home
+   label: Home Page
+   type: file
+   path: ./index.html
+   fields:
+   - {name: navbar-title, label: Navbar Title, type: string, required: false}
+   
