--- a/.pages.yml
+++ b/.pages.yml
@@ -3,7 +3,7 @@ content:
  - name: home
    label: Home Page
    type: file
-   path: ./index.html
+   path: index.html
    fields:
    - {name: navbar-title, label: Navbar Title, type: string, required: false}
    
